--- a/index.html
+++ b/index.html
@@ -3,27 +3,83 @@
     <head>
         <title>Happy Birthday Boho!</title>
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/bootstrap.min.css" />
+        <link rel="stylesheet" href="ccs/bootstrap-grid.min.css" />
+        <link rel="stylesheet" href="ccs/bootstrap-reboot.min.css" />
     </head>
-    <body>
-        <div class="splash-slide">
+    <body class="text-center">
+        <div class="parallax splash-slide">
             <h1>Wait what?!?</h1>
             <sub>A gift from a web developer to a UI/UX designer</sub>
-            <div class="splash-slide0"></div>
-            <div class="splash-slide1"></div>
+            <!--Add pre and post excalation-->
         </div>
-        <div class="paint-slide">
+        <div class="parallax paint-slide">
             <!--A backgroud image of butter knife with paint-->
             <p>Thank you for telling me ways to make this painting.</p>
             <!--Parallax to the painting-->
         </div>
-        <div class="painting-slide">
+        <div class="parallax painting-slide">
             <!--Parallax from the butter knife-->
-            <p>Obviously, the painting. The badness is completely on me.</p>
+            <p>Obviously, the painting. The badness is completely on me.</p><br/>
             <p>But it's the people interpretation that is just marvelous</p>
             <sub>Hover over them to know what they said</sub>
             <!--Add a dynamic style for mobile view-->
             <!--Like a testimonial-->
-            <ul>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="images/green.png">
+                        <div class="carousel-caption d-none d-md-block">
+                                <h5>Is she pregnent? Why is she blue?</h5>
+                                <p>Meghna Khaitan</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/red.png">
+                        <div class="carousel-caption d-none d-md-block">
+                                <h5>Is she dragging her dog? Wtf! She is a banjaran and she has a phone?</h5>
+                                <p>My youngest Chachu</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/yellow.png">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>I like her ass</h5>
+                            <p>Girish Pooplaani</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/green.png">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Is it fat or is it potli?</h5>
+                            <p>Rash With A Rai</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/red.png">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>A dead body in the sack below with it's hand coming out!</h5>
+                            <p>Muttu</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
+            </div>
+            <!--ul>
                 <li>
                     <attr title="Is she pregnent? Why is she blue?">
                         Meghna Khaitan
@@ -49,35 +105,35 @@
                         Muttu
                     </attr>
                 </li>
-            </ul>
+            </ul-->
         </div>
-        <div class="dadi-nebulizer">
+        <div class="parallax dadi-nebulizer">
             <!--Parallex to Dadi's nebulizer-->
             <p>I know you've been through a lot. And you have so many physical problems</p>
         </div>
-        <div class="roster-slide">
+        <div class="parallax roster-slide">
             <!--Parallax to roster-->
             <p>If it help, this is my roster for the month of May.</p>
             <h1>So f-ing colourful</h1>
             <p>And I got hair loss problems</p>
         </div>
-        <div class="lti-slide0">
+        <div class="parallax lti-slide0">
             <!--video background of LTI water problem-->
             <p>Look at how bad the water here is sometimes.</p>
             <p>I guess Mira Road people find similar problems everywhere</p>
         </div>
-        <div class="lti-slide1">
+        <div class="parallax lti-slide1">
             <!--LTI cabs-->
             <p>But, we have amazing cabs</p>
         </div>
-        <div class="pubby-slide0">
+        <div class="parallax pubby-slide0">
             <p>Look at what Pubby was wearing when making a gift for you.</p>
         </div>
-        <div< class="pubby-slide1">
+        <div class="parallax pubby-slide1">
             <!--Red mark encircling the main content-->
             <p>If you didn't notice</p>
         </div>
-        <div class="chocolate-slide">
+        <div class="parallax chocolate-slide">
             <p>Ending, with a connection.</p>
             <p>Melt the chocolate ice cream and put it in the Belgiun Waffle.</p>
             <p>You love Waffles!</p>
@@ -90,7 +146,7 @@
                 </small>
             </p>
         </div>
-        <div class="last-slide">
+        <div class="parallax last-slide">
             <p>Thank you for being.</p>
             <p>Miss you. Love you, still!</p>
             <p>
@@ -99,9 +155,11 @@
                 </small>
             </p>
         </div>
-        <footer>
+        <!--footer>
             <a href="">Rate</a>
-        </footer>
-        <script src=""></script>
+        </footer-->
+    <script src = "js/jquery.min.js" ></script>
+    <script src = "js/popper.min.js"></script>
+    <script src = "js/bootstrap.min.js"></script>
     </body>
 </html>
