--- a/index.html
+++ b/index.html
@@ -2,151 +2,124 @@
 <html>
     <head>
         <title>Happy Birthday Boho!</title>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
-        <link rel="stylesheet" href="ccs/bootstrap-grid.min.css" />
-        <link rel="stylesheet" href="ccs/bootstrap-reboot.min.css" />
     </head>
     <body class="text-center">
-        <div class="parallax splash-slide">
-            <h1>Wait what?!?</h1>
-            <sub>A gift from a web developer to a UI/UX designer</sub>
-            <!--Add pre and post excalation-->
+        <!--All photos should be less than 100 KB-->
+        <div class="flex parallax splash-slide">
+            <!--Place it above the splash-slide0 and splash-slide1 divs-->
+            <h1>Hi Boho!</h1>
+            <h4></h4>
         </div>
-        <div class="parallax paint-slide">
+        <div class="flex-row parallax">
+            <div class="parallax splash-slide0">
+                Left side
+            </div>
+            <div class="parallax splash-slide1">
+                Right side
+            </div>
+        </div>
+        <div class="parallax flex paint-slide">
             <!--A backgroud image of butter knife with paint-->
             <p>Thank you for telling me ways to make this painting.</p>
-            <!--Parallax to the painting-->
         </div>
-        <div class="parallax painting-slide">
-            <!--Parallax from the butter knife-->
+        <div class="parallax flex painting-slide">
+            <!--The main painting as a background-->
             <p>Obviously, the painting. The badness is completely on me.</p><br/>
             <p>But it's the people interpretation that is just marvelous</p>
-            <sub>Hover over them to know what they said</sub>
             <!--Add a dynamic style for mobile view-->
-            <!--Like a testimonial-->
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
+        </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <!--All photos should be of the same size-->
+            <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="images/green.png">
-                        <div class="carousel-caption d-none d-md-block">
-                                <h5>Is she pregnent? Why is she blue?</h5>
-                                <p>Meghna Khaitan</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="images/red.png">
-                        <div class="carousel-caption d-none d-md-block">
-                                <h5>Is she dragging her dog? Wtf! She is a banjaran and she has a phone?</h5>
-                                <p>My youngest Chachu</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="images/yellow.png">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>I like her ass</h5>
-                            <p>Girish Pooplaani</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="images/green.png">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Is it fat or is it potli?</h5>
-                            <p>Rash With A Rai</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="images/red.png">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>A dead body in the sack below with it's hand coming out!</h5>
-                            <p>Muttu</p>
-                        </div>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="images/green.png">
+                    <div class="carousel-caption d-none d-md-block">
+                            <h5>Is she pregnent? Why is she blue?</h5>
+                            <p>Meghna Khaitan</p>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-                </a>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/red.png">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Is she dragging her dog? Wtf! She is a banjaran and she has a phone?</h5>
+                        <p>My youngest Chachu</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/yellow.png">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>I like her ass</h5>
+                        <p>Girish Pooplaani</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/animate0.png">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Is it fat or is it potli?</h5>
+                        <p>Rash With A Rai</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/animate1.png">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>A dead body in the sack below with it's hand coming out!</h5>
+                        <p>Muttu</p>
+                    </div>
+                </div>
             </div>
-            <!--ul>
-                <li>
-                    <attr title="Is she pregnent? Why is she blue?">
-                        Meghna Khaitan
-                    </attr>
-                </li>
-                <li>
-                    <attr title="Is she dragging her dog? Wtf! She is a banjara and she has a phone?">
-                        My youngest Chachu
-                    </attr>
-                </li>
-                <li>
-                    <attr title="I like her ass">
-                        Girish Pooplaani
-                    </attr>
-                </li>
-                <li>
-                    <attr title="Is it fat or is it potli? The only person to say the correct thing">
-                        Rash With A Rai
-                    </attr>
-                </li>
-                <li>
-                    <attr title="A dead body in the sack below with it's hand coming out!">
-                        Muttu
-                    </attr>
-                </li>
-            </ul-->
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+            </a>
         </div>
-        <div class="parallax dadi-nebulizer">
-            <!--Parallex to Dadi's nebulizer-->
+        <div class="parallax flex dadi-nebulizer">
+            <!--Dadi nebulizer as the background-->
             <p>I know you've been through a lot. And you have so many physical problems</p>
         </div>
-        <div class="parallax roster-slide">
-            <!--Parallax to roster-->
-            <p>If it help, this is my roster for the month of May.</p>
+        <div class="parallax flex roster-slide">
+            <!--May roster-->
+            <p>If it helps, this is my roster for the month of May.</p>
             <h1>So f-ing colourful</h1>
             <p>And I got hair loss problems</p>
         </div>
-        <div class="parallax lti-slide0">
+        <div class="parallax flex lti-slide0">
             <!--video background of LTI water problem-->
+            <!--Or just a screenshot of the main content-->
             <p>Look at how bad the water here is sometimes.</p>
             <p>I guess Mira Road people find similar problems everywhere</p>
         </div>
-        <div class="parallax lti-slide1">
+        <div class="parallax flex lti-slide1">
             <!--LTI cabs-->
             <p>But, we have amazing cabs</p>
         </div>
-        <div class="parallax pubby-slide0">
+        <div class="parallax flex pubby-slide0">
             <p>Look at what Pubby was wearing when making a gift for you.</p>
         </div>
-        <div class="parallax pubby-slide1">
+        <div class="parallax flex pubby-slide1">
             <!--Red mark encircling the main content-->
             <p>If you didn't notice</p>
         </div>
-        <div class="parallax chocolate-slide">
-            <p>Ending, with a connection.</p>
-            <p>Melt the chocolate ice cream and put it in the Belgiun Waffle.</p>
-            <p>You love Waffles!</p>
-            <p>
-                <a href="">
-                    #TwoGirlsOneCup
-                </a><br/>
-                <small>
-                    [Do not click this link]
-                </small>
-            </p>
+        <div class="parallax flex chocolate-slide">
+            <p>Thanks for telling about the <a href="https://www.youtube.com/watch?v=_SsUTLAhbWE">best video</a> in the world.</p>
+            <sub>This link is safe to click</sub><br/>
+            <sub><a href="https://shockchan.com/2-girls-1-cup-video/">This isn't</a></sub>
         </div>
-        <div class="parallax last-slide">
+        <div class="parallax flex last-slide">
+            <h1>In the end...</h1>
             <p>Thank you for being.</p>
             <p>Miss you. Love you, still!</p>
             <p>
