Added the rock on emoticon

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="parallax flex last-slide">
             <h1>In the end...</h1>
             <p>Thank you for being.</p>
-            <p>Miss you. Love you, still!</p>
+            <p>Miss you. Love you, still!</p><h2>&#x1F918&#x1F3FC</h2> <!--Rock on emoticon-->
             <p>
                 <small>
                     Also, thanks to Vandita. If her birthday wasn't on 8th, I wouldn't have found the plans and motivation in making this gift!
