--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body class="text-center">
         <!--All photos should be less than 100 KB-->
+<!--make website for mobile use as well-->
         <div class="flex parallax splash-slide">
             <!--Place it above the splash-slide0 and splash-slide1 divs-->
             <h1>Hi Boho!</h1>
