--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Hi Boho!</h1>
             <h4></h4>
         </div>
-        <div class="flex-row parallax">
+        <div class="flex-row parallax splash-slide">
             <div class="parallax splash-slide0">
                 Left side
             </div>
