Made the website mobile friendly and added the final photos.

--- a/index.html
+++ b/index.html
@@ -13,17 +13,9 @@
             <h1>Hi Boho!</h1>
             <h4></h4>
         </div>
-        <div class="flex-row parallax">
-            <div class="parallax splash-slide0">
-                Left side
-            </div>
-            <div class="parallax splash-slide1">
-                Right side
-            </div>
-        </div>
         <div class="parallax flex paint-slide">
             <!--A backgroud image of butter knife with paint-->
-            <p>Thank you for telling me ways to make this painting.</p>
+            <p>Thank you for telling me ways to make paintings.</p>
         </div>
         <div class="parallax flex painting-slide">
             <!--The main painting as a background-->
@@ -39,41 +31,49 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/green.png">
+                    <img class="d-block w-100" src="images/painting-waist.jpg">
                     <div class="carousel-caption d-none d-md-block">
                             <h5>Is she pregnent? Why is she blue?</h5>
                             <p>Meghna Khaitan</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/red.png">
+                    <img class="d-block w-100" src="images/painting-bag.jpg">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Is she dragging her dog? Wtf! She is a banjaran and she has a phone?</h5>
-                        <p>My youngest Chachu</p>
+                        <h5>A dead body in the sack below with it's hand coming out!</h5>
+                        <p>Muttu</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/yellow.png">
+                    <img class="d-block w-100" src="images/painting-waist.jpg">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>I like her ass</h5>
                         <p>Girish Pooplaani</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/animate0.png">
+                    <img class="d-block w-100" src="images/painting-hand.jpg">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Is she dragging her dog? Wtf! She is a banjaran and she has a phone?</h5>
+                        <p>My youngest Chachu</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/painting-waist.jpg">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Is it fat or is it potli?</h5>
                         <p>Rash With A Rai</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/animate1.png">
+                    <img class="d-block w-100" src="images/painting-hand.jpg">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>A dead body in the sack below with it's hand coming out!</h5>
-                        <p>Muttu</p>
+                        <h5>Technology connecting even the most remote people.</h5>
+                        <p>Anika with an S</p>
                     </div>
                 </div>
             </div>
@@ -89,6 +89,9 @@
         <div class="parallax flex dadi-nebulizer">
             <!--Dadi nebulizer as the background-->
             <p>I know you've been through a lot. And you have so many physical problems</p>
+        </div>
+        <div class="parallax flex dadi-yo">
+            <p>Look at her greeting you!</p>
         </div>
         <div class="parallax flex roster-slide">
             <!--May roster-->
