Added a footer to the index page

--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
                 </small>
             </p>
         </div>
-        <!--footer>
-            <a href="">Rate</a>
-        </footer-->
+        <footer>
+            <p>Feel free to ping me!</p>
+        </footer>
     <script src = "js/jquery.min.js" ></script>
-    <script src = "js/popper.min.js"></script>
+    <!--script src = "js/popper.min.js"></script-->
     <script src = "js/bootstrap.min.js"></script>
     </body>
 </html>
