--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="flex parallax splash-slide">
             <!--Place it above the splash-slide0 and splash-slide1 divs-->
             <h1>Hi Boho!</h1>
-            <h4></h4>
+            <h3>Oh look! It's your Monday-ane birthday!</h3>
         </div>
         <div class="parallax flex paint-slide">
             <!--A backgroud image of butter knife with paint-->
@@ -20,7 +20,7 @@
         </div>
         <div class="parallax flex painting-slide">
             <!--The main painting as a background-->
-            <p>Obviously, the painting. The badness is completely on me.</p><br/>
+            <p>Obviously, the painting. The badness is completely on me.</p>
             <p>But it's the people interpretation that is just marvelous</p>
             <!--Add a dynamic style for mobile view-->
         </div>
