--- a/index.html
+++ b/index.html
@@ -7,131 +7,147 @@
         <link rel="stylesheet" href="css/bootstrap.min.css" />
     </head>
     <body class="text-center">
-        <!--All photos should be less than 100 KB-->
-<!--make website for mobile use as well-->
-        <div class="flex parallax splash-slide">
-            <!--Place it above the splash-slide0 and splash-slide1 divs-->
-            <h1>Hi Boho!</h1>
-            <h3>Oh look! It's your Monday-ane birthday!</h3>
-        </div>
-        <div class="parallax flex paint-slide">
-            <!--A backgroud image of butter knife with paint-->
-            <p>Thank you for telling me ways to make paintings.</p>
-        </div>
-        <div class="parallax flex painting-slide">
-            <!--The main painting as a background-->
-            <p>Obviously, the painting. The badness is completely on me.</p>
-            <p>But it's the people interpretation that is just marvelous</p>
-            <!--Add a dynamic style for mobile view-->
-        </div>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <!--All photos should be of the same size-->
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/painting-waist.jpg">
-                    <div class="carousel-caption d-none d-md-block">
-                            <h5>Is she pregnent? Why is she blue?</h5>
-                            <p>Meghna Khaitan</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/painting-bag.jpg">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>A dead body in the sack below with it's hand coming out!</h5>
-                        <p>Muttu</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/painting-waist.jpg">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>I like her ass</h5>
-                        <p>Girish Pooplaani</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/painting-hand.jpg">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Is she dragging her dog? Wtf! She is a banjaran and she has a phone?</h5>
-                        <p>My youngest Chachu</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/painting-waist.jpg">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Is it fat or is it potli?</h5>
-                        <p>Rash With A Rai</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="images/painting-hand.jpg">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Technology connecting even the most remote people.</h5>
-                        <p>Anika with an S</p>
-                    </div>
-                </div>
+        <!--All photos should be less than 1000 KB-->
+        <div id="load" class="spinner-border flex-row" role="status"></div>
+        <div id="contents" class="parallax">
+            <div class="flex parallax splash-slide">
+                <!--Place it above the splash-slide0 and splash-slide1 divs-->
+                <h1>Hi Boho!</h1>
+                <h3>Oh look! It's your Monday-ane birthday!</h3>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
+            <div class="parallax flex paint-slide">
+                <!--A backgroud image of butter knife with paint-->
+                <p>Thank you for telling me ways to make paintings.</p>
+            </div>
+            <div class="parallax flex painting-slide">
+                <!--The main painting as a background-->
+                <p>Obviously, the painting. The badness is completely on me.</p>
+                <p>But it's the people interpretation that is just marvelous</p>
+                <!--Add a dynamic style for mobile view-->
+            </div>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <!--All photos should be of the same size-->
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="images/painting-waist.jpg">
+                        <div class="carousel-caption d-none d-md-block">
+                                <h5>Is she pregnent? Why is she blue?</h5>
+                                <p>Meghna Khaitan</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/painting-bag.jpg">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>A dead body in the sack below with it's hand coming out!</h5>
+                            <p>Muttu</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/painting-waist.jpg">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>I like her ass</h5>
+                            <p>Girish Pooplaani</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/painting-hand.jpg">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Is she dragging her dog? Wtf! She is a banjaran and she has a phone?</h5>
+                            <p>My youngest Chachu</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/painting-waist.jpg">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Is it fat or is it potli?</h5>
+                            <p>Rash With A Rai</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/painting-hand.jpg">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Technology connecting even the most remote people.</h5>
+                            <p>Anika with an S</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
+            </div>
+            <div class="parallax flex dadi-nebulizer">
+                <!--Dadi nebulizer as the background-->
+                <p>I know you've been through a lot. And you have so many physical problems</p>
+            </div>
+            <div class="parallax flex dadi-yo">
+                <p>Look at her greeting you!</p>
+            </div>
+            <div class="parallax flex roster-slide">
+                <!--May roster-->
+                <p>If it helps, this is my roster for the month of May.</p>
+                <h1>So f-ing colourful</h1>
+                <p>And I got hair loss problems</p>
+            </div>
+            <div class="parallax flex lti-slide0">
+                <!--video background of LTI water problem-->
+                <!--Or just a screenshot of the main content-->
+                <p>Look at how bad the water here is sometimes.</p>
+                <p>I guess Mira Road people find similar problems everywhere</p>
+            </div>
+            <div class="parallax flex lti-slide1">
+                <!--LTI cabs-->
+                <p>But, we have amazing cabs</p>
+            </div>
+            <div class="parallax flex pubby-slide0">
+                <p>Look at what Pubby was wearing when making a gift for you.</p>
+            </div>
+            <div class="parallax flex pubby-slide1">
+                <!--Red mark encircling the main content-->
+                <p>If you didn't notice</p>
+            </div>
+            <div class="parallax flex chocolate-slide">
+                <p>Thanks for telling about the <a href="https://www.youtube.com/watch?v=_SsUTLAhbWE">best video</a> in the world.</p>
+                <sub>This link is safe to click</sub><br/>
+                <sub><a href="https://shockchan.com/2-girls-1-cup-video/">This isn't</a></sub>
+            </div>
+            <div class="parallax flex last-slide">
+                <h1>In the end...</h1>
+                <p>Thank you for being.</p>
+                <p>Miss you. Love you, still!</p><h2>&#x1F918&#x1F3FC</h2> <!--Rock on emoticon-->
+                <p>
+                    <small>
+                        Also, thanks to Vandita. If it wasn't her birthday on 8th, I wouldn't have found the plans and motivation in making this gift!
+                    </small>
+                </p>
+            </div>
         </div>
-        <div class="parallax flex dadi-nebulizer">
-            <!--Dadi nebulizer as the background-->
-            <p>I know you've been through a lot. And you have so many physical problems</p>
-        </div>
-        <div class="parallax flex dadi-yo">
-            <p>Look at her greeting you!</p>
-        </div>
-        <div class="parallax flex roster-slide">
-            <!--May roster-->
-            <p>If it helps, this is my roster for the month of May.</p>
-            <h1>So f-ing colourful</h1>
-            <p>And I got hair loss problems</p>
-        </div>
-        <div class="parallax flex lti-slide0">
-            <!--video background of LTI water problem-->
-            <!--Or just a screenshot of the main content-->
-            <p>Look at how bad the water here is sometimes.</p>
-            <p>I guess Mira Road people find similar problems everywhere</p>
-        </div>
-        <div class="parallax flex lti-slide1">
-            <!--LTI cabs-->
-            <p>But, we have amazing cabs</p>
-        </div>
-        <div class="parallax flex pubby-slide0">
-            <p>Look at what Pubby was wearing when making a gift for you.</p>
-        </div>
-        <div class="parallax flex pubby-slide1">
-            <!--Red mark encircling the main content-->
-            <p>If you didn't notice</p>
-        </div>
-        <div class="parallax flex chocolate-slide">
-            <p>Thanks for telling about the <a href="https://www.youtube.com/watch?v=_SsUTLAhbWE">best video</a> in the world.</p>
-            <sub>This link is safe to click</sub><br/>
-            <sub><a href="https://shockchan.com/2-girls-1-cup-video/">This isn't</a></sub>
-        </div>
-        <div class="parallax flex last-slide">
-            <h1>In the end...</h1>
-            <p>Thank you for being.</p>
-            <p>Miss you. Love you, still!</p><h2>&#x1F918&#x1F3FC</h2> <!--Rock on emoticon-->
-            <p>
-                <small>
-                    Also, thanks to Vandita. If her birthday wasn't on 8th, I wouldn't have found the plans and motivation in making this gift!
-                </small>
-            </p>
-        </div>
+    <script>
+        document.onreadystatechange = function () {
+            var state = document.readyState
+            if (state == 'interactive') {
+                 document.getElementById('contents').style.visibility="hidden";
+            } else if (state == 'complete') {
+                setTimeout(function(){
+                   document.getElementById('interactive');
+                   document.getElementById('load').style.visibility="hidden";
+                   document.getElementById('contents').style.visibility="visible";
+                },1000);
+            }
+        }
+    </script>
     <script src = "js/jquery.min.js" ></script>
     <!--script src = "js/popper.min.js"></script-->
     <script src = "js/bootstrap.min.js"></script>
