--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body class="text-center">
         <!--All photos should be less than 1000 KB-->
-        <div id="load" class="spinner-border flex-row" role="status"></div>
+        <div id="load" class="spinner-border" role="status"></div>
         <div id="contents" class="parallax">
             <div class="flex parallax splash-slide">
                 <!--Place it above the splash-slide0 and splash-slide1 divs-->
