--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
         <!--All photos should be less than 1000 KB-->
         <div id="load" class="spinner-border" role="status"></div>
         <div id="contents" class="parallax">
-            <div class="flex parallax splash-slide">
+            <div class="flex parallax">
                 <!--Place it above the splash-slide0 and splash-slide1 divs-->
                 <h1>Title!!</h1>
                 <h3>Sub-title comes here...</h3>
                 <p>Different photos for desktop and mobile phones</p>
             </div>
-            <div class="parallax flex paint-slide">
+            <div class="parallax flex green-slide">
                 <!--A backgroud image of butter knife with paint-->
                 <p>Loren ipsum dim sum. Komitet.</p>
             </div>
-            <div class="parallax flex painting-slide">
+            <div class="parallax flex red-slide">
                 <!--The main painting as a background-->
                 <p>Paragraphs can have multiple lines in them.</p>
                 <p>Two paragraphs will be places vertically</p>
@@ -89,36 +89,36 @@
                 <span class="sr-only">Next</span>
                 </a>
             </div>
-            <div class="parallax flex dadi-nebulizer">
+            <div class="parallax flex blue-slide">
                 <p>Some text comes here</p>
             </div>
             <div class="parallax flex dadi-yo">
                 <p>Some text comes here</p>
             </div>
-            <div class="parallax flex roster-slide">
+            <div class="parallax flex green-slide">
                 <p>Maybe, place some longer text here</p>
                 <h1>Highlight on this text</h1>
                 <p>Some text comes here</p>
             </div>
-            <div class="parallax flex lti-slide0">
+            <div class="parallax flex red-slide">
                 <p>Some text comes here</p>
                 <p>Longer text comes here. Longer that almost everything.</p>
             </div>
-            <div class="parallax flex lti-slide1">
+            <div class="parallax flex blue-slide">
                 <p>Some text comes here</p>
             </div>
-            <div class="parallax flex pubby-slide0">
+            <div class="parallax flex green-slide">
                 <p>Some text comes here</p>
             </div>
-            <div class="parallax flex pubby-slide1">
+            <div class="parallax flex red-slide">
                 <p>See the parallax effect</p>
             </div>
-            <div class="parallax flex chocolate-slide">
+            <div class="parallax flex blue-slide">
                 <p>Some text comes here</p>
                 <sub>This text is small</sub><br/>
                 <sub>This too</sub>
             </div>
-            <div class="parallax flex last-slide">
+            <div class="parallax flex green-slide">
                 <h1>The Ends<h1>
                 <p>Some text comes here</p>
                 <p>Support for UTF-8 charset</p><h2>&#x1F918&#x1F3FC</h2> <!--Rock on emoticon-->
